# bebop2_controller

./: .bash_history  .devcontainer.json  .gitignore  ApriltagLandmarksExtended_8cpp.html  ApriltagLandmarksExtended_8cpp_source.html  ApriltagLandmarksExtended_8h.html  ApriltagLandmarksExtended_8h_source.html  ApriltagLandmarks_8cpp.html  ApriltagLandmarks_8cpp_source.html  ApriltagLandmarks_8h.html  ApriltagLandmarks_8h_source.html  CMakeLists.txt  CPUData_8cpp.html  CPUData_8cpp_source.html  CPUData_8h.html  CPUData_8h_source.html  CPUSnapshot_8cpp.html  CPUSnapshot_8cpp_source.html  CPUSnapshot_8h.html  CPUSnapshot_8h_source.html  ComplementaryFilter_8h.html  ComplementaryFilter_8h_source.html  ControlViz_8cpp.html  ControlViz_8cpp_source.html  ControlViz_8h.html  ControlViz_8h_source.html  ControllerBase_8cpp.html  ControllerBase_8cpp_source.html  ControllerBase_8h.html  ControllerBase_8h_source.html  Dockerfile  Doxyfile  DummyState_8cpp.html  DummyState_8cpp_source.html  DummyState_8h.html  DummyState_8h_source.html  ExtendedKalmanFilter_8cpp.html  ExtendedKalmanFilter_8cpp_source.html  ExtendedKalmanFilter_8h.html  ExtendedKalmanFilter_8h_source.html  (+261 more)
AprilStateEstimator/: CMakeLists.txt
AprilStateEstimator/src/: SensorData.cpp  SensorData.h  StateEstimator.cpp  StateEstimator.h  bebop2_stateEstimator_node.cpp  bebop2_stateEstimator_nodelet.cpp
Core/: StateViz.cpp  StateViz.h
DummyStateEstimator/: CMakeLists.txt  DummyState.cpp  DummyState.h  bebop2_dummy_stateEstimator_node.cpp
action/: Setpoints.action  Waypoints.action
bebop2_autonomy/: Dockerfile  docker-compose.yml  run.sh
bebop2_controller_gui/: CMakeLists.txt  CPUData.h  CPUSnapshot.h  dfa.cpp  dfa.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  process_manager.cpp  process_manager.h
config/: FolderOrganizer.py  bebop2_controller.perspective  ekf.yaml  ekfExp.yaml  ekfExpPrev.yaml  ekfLandmarks.yaml  param.yaml  rqt..perspective  tag.rviz  tags.yaml  ukf.yaml
control/: ControlViz.cpp  ControlViz.h  ControllerBase.cpp  ControllerBase.h  JoystickController.cpp  JoystickController.h  PID.cpp  PositionController.cpp  PositionController.h  QuadControllerPID.cpp
controller/: CMakeLists.txt  ControllerBase.h
controller/LQR/: LQRController.cpp  quad_lqg.cpp  quad_lqg.h
controller/PID/: PID.cpp  quad_pids.cpp
controller/interface/: ControlViz.cpp  ControlViz.h  ControllerInterface.cpp  bebop2_controller_node.cpp
controller/src/: DroneController.cpp  DroneController.h  JoystickInterface.cpp  JoystickInterface.h  bebop2_controller_node.cpp  bebop2_controller_nodelet.cpp  pid.cpp  pid.h
drone_ws/bebop2_controller/perception/: CMakeLists.txt
drone_ws/bebop2_controller/perception/filter/LPF/: ComplementaryFilter.h
drone_ws/bebop2_controller/perception/interface/: StateObserver.cpp  StateObserver.h  bebop2_sim_state_node.cpp  bebop2_state_estimator_lpf_node.cpp  bebop2_state_estimator_vicon_node.cpp
drone_ws/bebop2_controller/perception/sensor/: SensorBase.h
drone_ws/bebop2_controller/perception/sensor/dummy/: DummyState.cpp  DummyState.h
drone_ws/bebop2_controller/perception/sensor/landmark/: ApriltagLandmarks.h
icon/: bebop2.sh
launch/: apriltag.launch  bebop_apriltag.launch  bebop_controller.launch  bebop_ekfLandmakrs.launch  bebop_frames.launch  bebop_stateEstimator.launch  bebop_stateEstimator_dummy.launch  controller_debug.launch  dummy.launch  nav_controller_debug.launch  nav_controller_debug_v2.launch  nav_controller_exp.launch  nav_controller_exp_pf.launch  nav_controller_vicon_exp.launch  nav_controller_vicon_exp_with_rviz.launch  state_benchmark.launch  state_debug.launch  state_debug_01.launch  state_debug_pf.launch  static_frames.launch
localization/: StateEstimation.cpp  StateEstimation.h  StateObserver.cpp  StateObserver.h
localization/Filters/particle_filter/: CMakeLists.txt  helper.h  main.cpp  particle_filter.cpp  particle_filter.h
navigation/: CMakeLists.txt
navigation/TrajGeneratorV2/: TrajGeneratorV2.pro  eight.cpp  eight.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
navigation/interface/: waypoint_control_server.cpp
navigation/trajectory/: trajectory_planner.h  waypoint_trajectory_interface.h
navigation/waypoints/: WaypointController.cpp  WaypointController.h
perception/: CMakeLists.txt
scripts/: bebop2_state_estimator_pf.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+86 more)
test/: .~lock.Square.csv#  CMakeLists.txt  Square.csv  eight.csv  eight1.csv  eight1.sh  eight2.sh  eight2_exp.sh  eight3.sh  helper.h  killing_machine_backup.csv  logger_2023-10-03_16:43:44.csv  logger_2023-10-17_12:40:57.csv  logger_2023-10-17_13:52:34.csv  plot.gp  send_wp.sh  sim_rect.sh  test.cpp  test_apriltag_landmark.cpp  test_quad_lqg.cpp  test_quad_pids.cpp  test_waypoint_trajectory.cpp  vicon_eight_traj.csv  wps.csv
unittest/: CMakeLists.txt  apriltag_ekf_pid.cpp  dummy_ekf_pid.cpp  odom_to_csv.cpp  test_complimentary_filter.cpp  test_ekf.cpp  test_robot_localization.cpp
unittest/new/: logger_2023-02-25_23:43:45.csv  logger_2023-02-26_08:42:27.csv  logger_2023-02-26_11:09:21.csv  logger_2023-02-26_12:53:14.csv  logger_2023-03-03_08:20:10.csv  logger_2023-03-03_08:25:46.csv  logger_2023-03-03_08:50:52.csv  logger_2023-03-03_08:54:33.csv  logger_2023-03-03_08:58:06.csv  logger_2023-03-03_09:16:17.csv  logger_2023-03-03_09:30:47.csv  logger_2023-03-03_09:32:56.csv  logger_2023-03-03_09:36:13.csv  logger_2023-03-03_09:38:07.csv  logger_2023-03-03_09:41:59.csv  logger_2023-03-03_09:52:36.csv  logger_2023-03-03_11:19:28.csv  ref_logger_2023-02-25_11:02:02.csv  vizCSV.py
unittest/old/: logger_2023-02-24_19:37:17.csv  logger_2023-02-24_21:42:23.csv  logger_2023-02-24_21:54:42.csv  raw_logger_2023-02-24_16:24:32.csv
(+847 files in other folders)
